--- a/sim/config.json
+++ b/sim/config.json
@@ -1,1 +1,61 @@
-{"mqttPort": 1883, "publish": 10000, "collect": 10000, "topicPrefix": "dev/", "topicErr": "/ERR", "mqttPassword": "", "sensors": [{"type": "integer", "name": "humiditySensor"}, {"type": "integer", "name": "temperatureSensor"}, {"type": "integer", "name": "soilmoistureSensor"}, {"type": "integer", "name": "solarradiationSensor"}, {"type": "boolean", "name": "ledActuator"}], "topicRes": "/RES", "mqttUsername": "", "topicReq": "/REQ"}
+{
+    "mqttPort": 1883,
+    "publish": 10000,
+    "collect": 10000,
+    "topicPrefix": "dev/",
+    "topicErr": "/ERR",
+    "mqttPassword": "",
+    "sensors": [
+        {
+            "type": "integer",
+            "name": "humiditySensor"
+        },
+        {
+            "type": "integer",
+            "name": "temperatureSensor"
+        },
+        {
+            "type": "integer",
+            "name": "environmentTemperatureSensor"
+        },
+        {
+            "type": "integer",
+            "name": "soilmoistureSensor"
+        },
+        {
+            "type": "integer",
+            "name": "heartrateSensor"
+        },
+        {
+            "type": "integer",
+            "name": "bloodPressureSensor"
+        },
+        {
+            "type": "integer",
+            "name": "bodyTemperatureSensor"
+        },
+        {
+            "type": "integer",
+            "name": "ecgmonitor"
+        },
+        {
+            "type": "integer",
+            "name": "glucometerSensor"
+        },
+        {
+            "type": "integer",
+            "name": "oxymeterSensor"
+        },
+        {
+            "type": "integer",
+            "name": "smokeSensor"
+        },
+        {
+            "type": "boolean",
+            "name": "ledActuator"
+        }
+    ],
+    "topicRes": "/RES",
+    "mqttUsername": "",
+    "topicReq": "/REQ"
+}
