--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-
+.env
 *.log
 *.pyc
 *.log
 *.pyc
+/solid_server/FotSolid/backend/node_modules
 /solid_server/FotSolid/Sensor2Gateway/node_modules
 /solid_server/FotSolid/Sensor2Gateway/dist
