--- a/solid_server/FotSolid/Sensor2Gateway/package.json
+++ b/solid_server/FotSolid/Sensor2Gateway/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@comunica/query-sparql": "^3.1.2",
     "@inrupt/solid-client-authn-node": "^2.2.1",
+    "dotenv": "^16.4.5",
     "rdflib": "^2.2.20",
     "rocketrml": "^2.1.0",
     "solid-auth-cli": "^1.0.15",
