--- a/solid_server/FotSolid/backend/package.json
+++ b/solid_server/FotSolid/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@inrupt/solid-client-authn-browser": "^2.2.4",
+    "@inrupt/solid-client-authn-node": "^2.2.4",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
