--- a/solid_server/docker-compose-solid-v2.yml
+++ b/solid_server/docker-compose-solid-v2.yml
@@ -2,16 +2,25 @@ version: '1.0'
 services:
   SOLID_SERVER_S1:
     # image: georgepacheco/solid-server:1.1
-    image: georgepacheco/solid-server:1.3
+    # image: georgepacheco/solid-server:1.3
+    image: georgepacheco/dash_solid:1.0
     container_name: SOLID_SERVER_S1
+    # env_file:
+    #   .env
     volumes:
       - .:/solid-server
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
     expose:
-      - "3000"
+      - "3000"    
       - "3030"
+      - "3001"
+      - "3002"
     ports:
-     - "3000:3000"
+     - "3000:3000"     
+     - "3001:3001"
+     - "3002:3002"
      - "3030:3030"
+    # restart: always
     networks:
       comm-mqtt:
         aliases:
@@ -20,7 +29,7 @@ services:
         ipv4_address: 222.222.222.9
         aliases:
           - server1.solid        
-    entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js"    
+    entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
     
 networks:
   comm-mqtt:
