--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,27 @@
 *.pyc
 /solid_server/FotSolid/backend/node_modules
 /solid_server/FotSolid/Sensor2Gateway/node_modules
+/solid_server/FotSolid/health-application/node_modules
+/solid_server/FotSolid/fot-solid-dash/node_modules
+
+/solid_server/FotSolid/fot-solid-dash/.pnp
+/solid_server/FotSolid/health-application/.pnp
+
+.pnp.js
+
+# testing
+/solid_server/FotSolid/fot-solid-dash/coverage
+/solid_server/FotSolid/health-application/coverage
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
