--- a/solid_server/docker-compose-solid-v2.yml
+++ b/solid_server/docker-compose-solid-v2.yml
@@ -3,7 +3,8 @@ services:
   SOLID_SERVER_S1:
     # image: georgepacheco/solid-server:1.1
     # image: georgepacheco/solid-server:1.3
-    image: georgepacheco/dash_solid:1.0
+    # image: georgepacheco/dash_solid:1.0
+    image: georgepacheco/dash_solid:1.1
     container_name: SOLID_SERVER_S1
     # env_file:
     #   .env
@@ -21,18 +22,14 @@ services:
      - "3002:3002"
      - "3030:3030"
     # restart: always
-    network_mode: host
-    environment:
-      - BASE_URL=http://localhost:3000/
-      - PORT=3000
-    # networks:
-    #   comm-mqtt:
-    #     aliases:
-    #       - server1.solid
-    #   mqtt-mininet:
-    #     ipv4_address: 222.222.222.9
-    #     aliases:
-    #       - server1.solid        
+    networks:
+      comm-mqtt:
+        aliases:
+          - server1.solid
+      mqtt-mininet:
+        ipv4_address: 222.222.222.9
+        aliases:
+          - server1.solid        
     entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
     
 networks:
