--- a/solid_server/FotSolid/nginx.conf
+++ b/solid_server/FotSolid/nginx.conf
@@ -29,35 +29,27 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-server {
-    listen 3000;
-    server_name 10.27.0.62;
+    # upstream css {
+    #     server localhost:3000;
+    # }
 
-    location / {
-        proxy_pass http://localhost:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # server {
+    #     # listen 80;
+    #     # server_name 10.27.0.62;
 
-    location /.well-known/solid {
-        allow all;
-        proxy_pass http://localhost:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    #     listen 80 default_server;
+	#     listen [::]:80 default_server;
+	#     server_name 10.27.0.62;
+	#     return 301 https://$host$request_uri;
 
-    location /data {
-        proxy_pass http://localhost:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+    #     location / {
+    #     proxy_pass http://css;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
+    # }
 
     server {
          listen 3001;
