--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -48,6 +48,9 @@ http {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
     }
 
@@ -68,6 +71,9 @@ http {
 
         location / {
             try_files $uri $uri/ /index.html;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
 
@@ -95,6 +101,9 @@ http {
 
         location / {
             try_files $uri $uri/ /index.html;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
 
