--- a/solid_server/docker-compose-solid-v2.yml
+++ b/solid_server/docker-compose-solid-v2.yml
@@ -2,12 +2,12 @@ version: '3.8'
 services:
   SOLID_SERVER_S1:
     # image: georgepacheco/solid-server:1.1
-    # image: georgepacheco/solid-server:1.3
+    image: georgepacheco/solid-server:1.3
 
     # essa imagem já copiava o nginx.conf 
     # image: georgepacheco/dash_solid:1.0
 
-    image: georgepacheco/dash_solid:1.2
+    # image: georgepacheco/dash_solid:1.2
 
     container_name: SOLID_SERVER_S1
     # env_file:
@@ -19,15 +19,15 @@ services:
     expose:
       - "3000"    
       - "3030"
-      - "3001"
-      - "3002"
-      - "80"
+      # - "3001"
+      # - "3002"
+      # - "80"
     ports:
      - "3000:3000"     
-     - "3001:3001"
-     - "3002:3002"
      - "3030:3030"
-     - "80:80"
+    #  - "3001:3001"
+    #  - "3002:3002"
+    #  - "80:80"
     # restart: always
     networks:
       comm-mqtt:
@@ -37,7 +37,8 @@ services:
         ipv4_address: 222.222.222.9
         aliases:
           - server1.solid        
-    entrypoint: bash -c "npm start -- -b 10.27.0.62:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    # entrypoint: bash -c "npm start -- -b 10.27.0.62:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    entrypoint: bash -c "npm start -- -b 10.27.0.62:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js"    
     
 networks:
   comm-mqtt:
