--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -29,35 +29,35 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-    upstream css {
-        server localhost:3000;
-    }
+    # upstream css {
+    #     server localhost:3000;
+    # }
 
-    server {
-        listen 80;
-        server_name 10.27.0.62;
+    # server {
+    #     listen 80;
+    #     server_name 10.27.0.62;
 
-        # listen 80 default_server;
-	    # listen [::]:80 default_server;
-	    # server_name 10.27.0.62;
-	    # return 301 https://$host$request_uri;
+    #     # listen 80 default_server;
+	#     # listen [::]:80 default_server;
+	#     # server_name 10.27.0.62;
+	#     # return 301 https://$host$request_uri;
 
-        location / {
-        proxy_pass http://css;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        add_header Access-Control-Allow-Origin "*";
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-        }
-    }
+    #     location / {
+    #     proxy_pass http://css;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     add_header Access-Control-Allow-Origin "*";
+    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
+    #     add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+    #     }
+    # }
 
     server {
          listen 3001;
          listen [::]:3001;
-         server_name http://10.27.0.62;
+         server_name http://localhost;
          server_tokens off;
 
          location ^~ /.well-known/acme-challenge/ {
@@ -87,7 +87,7 @@ http {
     server {
          listen 3002;
          listen [::]:3002;
-         server_name http://10.27.0.62;
+         server_name http://localhost;
          server_tokens off;
 
          location ^~ /.well-known/acme-challenge/ {
