--- a/solid_server/docker-compose-solid-v2-local.yml
+++ b/solid_server/docker-compose-solid-v2-local.yml
@@ -38,6 +38,7 @@ services:
         aliases:
           - server1.solid        
     entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js"    
     
 networks:
   comm-mqtt:
