--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -57,7 +57,7 @@ http {
     server {
          listen 3001;
          listen [::]:3001;
-         server_name http://localhost;
+         server_name _;
          server_tokens off;
 
          location ^~ /.well-known/acme-challenge/ {
@@ -87,7 +87,7 @@ http {
     server {
          listen 3002;
          listen [::]:3002;
-         server_name http://localhost;
+         server_name _;
          server_tokens off;
 
          location ^~ /.well-known/acme-challenge/ {
