--- a/solid_server/nginx_quase.conf
+++ b/solid_server/nginx_quase.conf
@@ -33,25 +33,18 @@ http {
     #     server localhost:3000;
     # }
 
-    # Redirect HTTP to HTTPS
     server {
+        listen 80;        
         server_name 192.168.0.111;
-        listen 80;
-        return 301 https://$host$request_uri;
-    }
 
-    server {
-        listen 443 ssl http2;        
-        server_name 192.168.0.111;        
-
-        ssl_certificate /etc/nginx/ssl/server.crt;
-        ssl_certificate_key /etc/nginx/ssl/server.key;
-
+        # listen 80 default_server;
+	    # listen [::]:80 default_server;
+	    # server_name 192.168.0.111;
+	    # return 301 https://$host$request_uri;
 
         location / {
-            proxy_pass http://192.168.0.111:3000;
             # proxy_pass http://localhost:3000$request_uri;
-            # proxy_pass http://192.168.0.111:3000;
+            proxy_pass http://192.168.0.111:3000;
             # proxy_pass http://localhost:3000;
             
             # proxy_set_header Host $host;
@@ -95,11 +88,17 @@ http {
     }
 
     server {
-        listen 3001 ssl;
-        server_name _;
-        ssl_certificate /etc/nginx/ssl/server.crt;
-        ssl_certificate_key /etc/nginx/ssl/server.key;
-        
+         listen 3001;
+         listen [::]:3001;
+         server_name _;
+         server_tokens off;
+
+         location ^~ /.well-known/acme-challenge/ {
+             default_type "text/plain";
+             root /var/www/certbot;
+         }
+
+
         root /usr/share/nginx/html/fot-solid-dash;
         index index.html;
 
@@ -110,18 +109,26 @@ http {
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
-        location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
-            expires 30d;
-            add_header Cache-Control "public";
-        }
+
+         # Configuração opcional para cache de recursos estáticos
+         location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+             expires 30d;
+             add_header Cache-Control "public";
+         }
     }
 
     server {
-        listen 3002 ssl;
-        server_name _;
-        ssl_certificate /etc/nginx/ssl/server.crt;
-        ssl_certificate_key /etc/nginx/ssl/server.key;
-        
+         listen 3002;
+         listen [::]:3002;
+         server_name _;
+         server_tokens off;
+
+         location ^~ /.well-known/acme-challenge/ {
+             default_type "text/plain";
+             root /var/www/certbot;
+         }
+
+
         root /usr/share/nginx/html/health-application;
         index index.html;
 
@@ -132,9 +139,11 @@ http {
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
-        location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
-            expires 30d;
-            add_header Cache-Control "public";
-        }
+
+         # Configuração opcional para cache de recursos estáticos
+         location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+             expires 30d;
+             add_header Cache-Control "public";
+         }
     }
 }
