--- a/solid_server/docker-compose-solid-certbot.yml
+++ b/solid_server/docker-compose-solid-certbot.yml
@@ -1,40 +1,31 @@
 services:
   SOLID_SERVER_S1:
-    # image: georgepacheco/solid-server:1.1
-    # image: georgepacheco/solid-server:1.3
-
-    # essa imagem já copiava o nginx.conf 
-    # image: georgepacheco/dash_solid:1.0
-
+    
     image: georgepacheco/dash-solid:1.2.2
 
     container_name: SOLID_SERVER_S1
-    # env_file:
-    #   .env
+    
     volumes:
       - .:/solid-server
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./FotSolid/fot-solid-dash/build:/usr/share/nginx/html/fot-solid-dash
       - ./FotSolid/health-application/build:/usr/share/nginx/html/health-application
       
-      - ./FotSolid/certs/server.crt:/etc/nginx/ssl/server.crt
-      - ./FotSolid/certs/server.key:/etc/nginx/ssl/server.key
-      # - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/conf:/etc/letsencrypt  # Monta os certificados
+      - ./certbot/www:/var/www/certbot    # Monta o diretório do desafio ACME
     expose:
       - "3000"    
       - "3030"
       - "3001"
       - "3002"
       - "80"
-      - "443"
     ports:
      - "3000:3000"     
      - "3001:3001"
      - "3002:3002"
      - "3030:3030"
      - "80:80"
-     - "443:443"
-    # restart: always
+    
     networks:
       comm-mqtt:
         aliases:
@@ -47,6 +38,14 @@ services:
     # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
     # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js"    
     
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt  # Monta o diretório para armazenar os certificados
+      - ./certbot/www:/var/www/certbot    # Monta o diretório do desafio ACME
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
 networks:
   comm-mqtt:
     name: comm-mqtt
