--- a/solid_server/nginx _quase2.conf
+++ b/solid_server/nginx _quase2.conf
@@ -33,25 +33,20 @@ http {
     #     server localhost:3000;
     # }
 
-    # Redirect HTTP to HTTPS
+   
+
     server {
+        listen 80;        
         server_name 192.168.0.111;
-        listen 80;
-        return 301 https://$host$request_uri;
-    }
 
-    server {
-        listen 443 ssl http2;        
-        server_name 192.168.0.111;        
-
-        ssl_certificate /etc/nginx/ssl/server.crt;
-        ssl_certificate_key /etc/nginx/ssl/server.key;
-
+        # listen 80 default_server;
+	    # listen [::]:80 default_server;
+	    # server_name 192.168.0.111;
+	    # return 301 https://$host$request_uri;
 
         location / {
-            proxy_pass http://192.168.0.111:3000;
             # proxy_pass http://localhost:3000$request_uri;
-            # proxy_pass http://192.168.0.111:3000;
+            proxy_pass http://192.168.0.111:3000;
             # proxy_pass http://localhost:3000;
             
             # proxy_set_header Host $host;
