--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -21,78 +21,42 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
-
+    
     keepalive_timeout  65;
-
-    #gzip  on;
-
+    
     include /etc/nginx/conf.d/*.conf;
     
-    # upstream community-solid-server {
-    #     server localhost:3000;
-    # }
-
-    # Redirect HTTP to HTTPS
-    server {
-        server_name 192.168.0.111;
+   server {
         listen 80;
+        server_name your-domain.com;
+
+        # Redireciona todo o tráfego HTTP para HTTPS
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl http2;        
-        server_name 192.168.0.111;        
+        listen 443 ssl;
+        server_name your-domain.com;
 
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
 
-
         location / {
-            proxy_pass http://192.168.0.111:3000;
-            # proxy_pass http://localhost:3000$request_uri;
-            # proxy_pass http://192.168.0.111:3000;
-            # proxy_pass http://localhost:3000;
+            # O proxy_pass usa HTTP para comunicação com o Solid Server
+            proxy_pass http://localhost:3000;
             
-            # proxy_set_header Host $host;
-            proxy_set_header Host 192.168.0.111:3000;
-            # proxy_set_header Host localhost:3000;
-            
-            # proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # Configura o Host que será enviado ao Solid Server
+            proxy_set_header Host localhost:3000;
 
-            # proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Host 192.168.0.111:3000;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Configurações CORS
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            # add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-
-            # Pass these headers from the Solid server back to the client
-            proxy_pass_header Server;
-            proxy_pass_header Set-Cookie;
-
-            # Enable Websocket support
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            # Trata requisições OPTIONS
-            if ($request_method = OPTIONS) {
-                add_header 'Access-Control-Allow-Origin' '*' always;
-                # add_header 'Access-Control-Allow-Origin' '*' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
-                add_header 'Access-Control-Allow-Credentials' 'true' always;
-                return 204;
-            }
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto HTTP;
            
+            # Opcional: Corrigir qualquer potencial redirecionamento para HTTPS
+            proxy_redirect https://localhost:3000/ http://localhost:3000/;
         }
     }
+
 
     server {
         listen 3001 ssl;
