--- a/solid_server/docker-compose-solid-v2-local.yml
+++ b/solid_server/docker-compose-solid-v2-local.yml
@@ -6,7 +6,16 @@ services:
     # essa imagem já copiava o nginx.conf 
     # image: georgepacheco/dash_solid:1.0
 
-    image: georgepacheco/dash-solid:1.2.2
+    # versão anterior com problema no https
+    # image: georgepacheco/dash-solid:1.2.2
+
+    # versão com tentativa de resolver o https. Criei uma 
+    # nova image do solid (1.3.2) para startar https e com os certificados
+    # salvos na pasta config/certs. Além disso já tem os dois usuários
+    # HomeSimulator e Health (para teste, pois precisará ser alterado
+    # quando for levar para o experimento, uma vez que os webIds desses
+    # usuários precisam estar de acordo com o endereço do servidor)
+    image: georgepacheco/dash-solid:1.2.3
 
     container_name: SOLID_SERVER_S1
     # env_file:
@@ -43,9 +52,10 @@ services:
         ipv4_address: 222.222.222.9
         aliases:
           - server1.solid        
-    # entrypoint: bash -c "npm start -- -b https://192.168.0.111:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
-    entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
-    # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js"    
+    # entrypoint: bash -c "npm start -- -b http://192.168.0.111:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    entrypoint: bash -c "npm start -- -b https://192.168.0.111:3000 -c config/file-https.json -f .data --httpsKey config/certs/server.key --httpsCert config/certs/server.crt & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    
     
 networks:
   comm-mqtt:
