--- a/solid_server/nginx_quase3.conf
+++ b/solid_server/nginx_quase3.conf
@@ -28,7 +28,7 @@ http {
     
    server {
         listen 80;
-        server_name 192.168.0.111;
+        server_name your-domain.com;
 
         # Redireciona todo o tráfego HTTP para HTTPS
         return 301 https://$host$request_uri;
@@ -36,24 +36,24 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 192.168.0.111;
+        server_name your-domain.com;
 
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
 
         location / {
             # O proxy_pass usa HTTP para comunicação com o Solid Server
-            proxy_pass https://192.168.0.111:3000;
+            proxy_pass http://localhost:3000;
             
             # Configura o Host que será enviado ao Solid Server
-            proxy_set_header Host 192.168.0.111:3000;
+            proxy_set_header Host localhost:3000;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto HTTP;
            
             # Opcional: Corrigir qualquer potencial redirecionamento para HTTPS
-            # proxy_redirect https://192.168.0.111:3000/ http://192.168.0.111:3000/;
+            proxy_redirect https://localhost:3000/ http://localhost:3000/;
         }
     }
 
