--- a/solid_server/docker-compose-solid-v2-local.yml
+++ b/solid_server/docker-compose-solid-v2-local.yml
@@ -17,6 +17,8 @@ services:
     # usuários precisam estar de acordo com o endereço do servidor)
     image: georgepacheco/dash-solid:1.2.3
 
+    # image: georgepacheco/dash-solid:1.7.1
+
     container_name: SOLID_SERVER_S1
     # env_file:
     #   .env
@@ -28,6 +30,7 @@ services:
       
       - ./FotSolid/certs/server.crt:/etc/nginx/ssl/server.crt
       - ./FotSolid/certs/server.key:/etc/nginx/ssl/server.key
+      # - ./FotSolid/certs/myCA.pem:/etc/nginx/ssl/myCA.pem
       # - ./nginx/conf/:/etc/nginx/conf.d/:ro
     expose:
       - "3000"    
@@ -53,7 +56,8 @@ services:
         aliases:
           - server1.solid        
     # entrypoint: bash -c "npm start -- -b http://192.168.0.111:3000 -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
-    entrypoint: bash -c "npm start -- -b https://192.168.0.111:3000 -c config/file-https.json -f .data --httpsKey config/certs/server.key --httpsCert config/certs/server.crt & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    entrypoint: bash -c "NODE_TLS_REJECT_UNAUTHORIZED=0 npm start -- -b https://192.168.0.111:3000 -c config/file-https.json -f .data --httpsKey config/certs/server.key --httpsCert config/certs/server.crt & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
+    # entrypoint: bash -c "npm start -- -b https://localhost:3000 -c config/file-https.json -f .data --httpsKey config/certs/server.key --httpsCert config/certs/server.crt & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
     # entrypoint: bash -c "npm start -- -c config/file.json -f .data & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
     
     
