--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -40,6 +40,11 @@ http {
 
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
+        
+	# ssl_trusted_certificate /etc/nginx/ssl/myCA.pem;
+
+        # ssl_protocols TLSv1.2 TLSv1.3;
+        # ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             # O proxy_pass usa HTTP para comunicação com o Solid Server
@@ -50,10 +55,21 @@ http {
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto HTTP;
+            # proxy_set_header X-Forwarded-Proto HTTP;
+            proxy_set_header X-Forwarded-Proto $scheme;
            
             # Opcional: Corrigir qualquer potencial redirecionamento para HTTPS
             # proxy_redirect https://192.168.0.111:3000/ http://192.168.0.111:3000/;
+
+             # Pass these headers from the Solid server back to the client
+    
+            # proxy_pass_header Server;
+            # proxy_pass_header Set-Cookie;
+
+            # # Enable Websocket support
+            # proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
         }
     }
 
