--- a/solid_server/nginx_actual_comments.conf
+++ b/solid_server/nginx_actual_comments.conf
@@ -40,6 +40,11 @@ http {
 
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
+        
+	# ssl_trusted_certificate /etc/nginx/ssl/myCA.pem;
+
+        # ssl_protocols TLSv1.2 TLSv1.3;
+        # ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             # O proxy_pass usa HTTP para comunicação com o Solid Server
@@ -50,27 +55,24 @@ http {
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto HTTP;
             proxy_set_header X-Forwarded-Proto $scheme;
-        
-        }
+           
+            # Opcional: Corrigir qualquer potencial redirecionamento para HTTPS
+            # proxy_redirect https://192.168.0.111:3000/ http://192.168.0.111:3000/;
 
-        # Aplicação 1
-        location /api/ {
-            proxy_pass http://192.168.0.111:3030;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+             # Pass these headers from the Solid server back to the client
+    
+            # proxy_pass_header Server;
+            # proxy_pass_header Set-Cookie;
+
+            # # Enable Websocket support
+            # proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
         }
     }
 
-    # server {
-    #     listen 3001;
-    #     server_name 192.168.0.111;
-
-    #     # Redireciona todo o tráfego HTTP para HTTPS
-    #     return 301 https://$host$request_uri;
-    # }
 
     server {
         listen 3001 ssl;
@@ -94,14 +96,6 @@ http {
         }
     }
 
-    # server {
-    #     listen 3002;
-    #     server_name 192.168.0.111;
-
-    #     # Redireciona todo o tráfego HTTP para HTTPS
-    #     return 301 https://$host$request_uri;
-    # }
-
     server {
         listen 3002 ssl;
         server_name _;
@@ -123,5 +117,26 @@ http {
             add_header Cache-Control "public";
         }
     }
-      
+
+    server {
+        listen 3030 ssl;
+        server_name _;
+        ssl_certificate /etc/nginx/ssl/server.crt;
+        ssl_certificate_key /etc/nginx/ssl/server.key;
+        
+        root /usr/share/nginx/html/fot-solid-dash;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        }
+
+        location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+            expires 30d;
+            add_header Cache-Control "public";
+        }
+    }
 }
