--- a/mqtt_server/docker-compose-mqtt.yml
+++ b/mqtt_server/docker-compose-mqtt.yml
@@ -22,13 +22,11 @@ services:
     #entrypoint: bash -c "mosquitto -c code/mosquitto-no-auth.conf & sleep 5 && mosquitto_sub -t '#' > DATA.json"
     stdin_open: true 
       
+            
 networks:
   comm-mqtt:
     name: comm-mqtt
-    driver: bridge
+    external: true
   mqtt-mininet:
     name: mqtt-mininet
-    ipam:
-      driver: default
-      config:
-        - subnet: "222.222.222.0/24"
+    external: true
