--- a/solid_server/docker-compose-solid-v2-local.yml
+++ b/solid_server/docker-compose-solid-v2-local.yml
@@ -39,11 +39,14 @@ services:
           - server1.solid        
     
     entrypoint: bash -c "NODE_TLS_REJECT_UNAUTHORIZED=0 npm start -- -b https://192.168.0.111:3000 -c config/file-https.json -f .data --httpsKey config/certs/server.key --httpsCert config/certs/server.crt & sleep 20 & python3 ../solid-server/server.py & node ../solid-server/FotSolid/backend/dist/index.js & nginx -c /etc/nginx/nginx.conf -g 'daemon off;'"    
-            
+
 networks:
   comm-mqtt:
     name: comm-mqtt
-    external: true
+    driver: bridge
   mqtt-mininet:
     name: mqtt-mininet
-    external: true
+    ipam:
+      driver: default
+      config:
+        - subnet: "222.222.222.0/24"
