--- a/solid_server/FotSolid/Sensor2Gateway/.env
+++ b/solid_server/FotSolid/Sensor2Gateway/.env
@@ -1,7 +1,7 @@
-# WEBID="http://localhost:3000/HomeSimulator/profile/card#me"
-WEBID="https://192.168.0.111:3000/HomeSimulator/profile/card#me"
+WEBID="https://107.23.217.181:3000/HomeSimulator/profile/card#me"
+# WEBID="https://192.168.0.111:3000/HomeSimulator/profile/card#me"
 PODNAME="HomeSimulator"
-# IDP="http://localhost:3000/"
-IDP="https://192.168.0.111:3000/"
+IDP="https://107.23.217.181:3000/"
+# IDP="https://192.168.0.111:3000/"
 LOGIN="home_simulator@fotsimulator.com"
 PASSWORD="simulator2024"
