--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -28,7 +28,8 @@ http {
     
    server {
         listen 80;
-        server_name 192.168.0.111;
+        # server_name 192.168.0.111;
+        server_name 107.23.217.181;
 
         # Redireciona todo o tráfego HTTP para HTTPS
         return 301 https://$host$request_uri;
@@ -36,17 +37,20 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 192.168.0.111;
+        # server_name 192.168.0.111;
+        server_name 107.23.217.181;
 
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
 
         location / {
             # O proxy_pass usa HTTP para comunicação com o Solid Server
-            proxy_pass https://192.168.0.111:3000;
+            # proxy_pass https://192.168.0.111:3000;
+            proxy_pass https://107.23.217.181:3000;
             
             # Configura o Host que será enviado ao Solid Server
-            proxy_set_header Host 192.168.0.111:3000;
+            # proxy_set_header Host 192.168.0.111:3000;
+            proxy_set_header Host 107.23.217.181:3000;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,7 +60,8 @@ http {
 
         # Aplicação 1
         location /api/ {
-            proxy_pass http://192.168.0.111:3030;
+            # proxy_pass http://192.168.0.111:3030;
+            proxy_pass http://107.23.217.181:3030;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
