--- a/solid_server/nginx.conf
+++ b/solid_server/nginx.conf
@@ -46,11 +46,13 @@ http {
         location / {
             # O proxy_pass usa HTTP para comunicação com o Solid Server
             # proxy_pass https://192.168.0.111:3000;
-            proxy_pass https://147.79.82.127:3000;
+            # proxy_pass https://147.79.82.127:3000;
+            proxy_pass https://147.79.82.127:3003;
             
             # Configura o Host que será enviado ao Solid Server
             # proxy_set_header Host 192.168.0.111:3000;
-            proxy_set_header Host 147.79.82.127:3000;
+            # proxy_set_header Host 147.79.82.127:3000;
+            proxy_set_header Host 147.79.82.127:3003;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
