--- a/solid_server/FotSolid/health-application/package.json
+++ b/solid_server/FotSolid/health-application/package.json
@@ -14,6 +14,7 @@
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/x-charts": "^7.24.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
